--- a/.build.yml
+++ b/.build.yml
@@ -8,6 +8,6 @@ tasks:
       cd aoe4api
       go build -v ./...
   - lint: |
-      wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s
+      wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- v1.46.0
       cd aoe4api
       ~/bin/golangci-lint -v run
