--- a/.builds/ci.yml
+++ b/.builds/ci.yml
@@ -6,8 +6,8 @@ sources:
 tasks:
   - build: |
       cd aoe4api
-      go build -v ./...
+      go build -v .
   - lint: |
-      wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- v1.46.0
+      wget -O- -nv https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- v1.46.1
       cd aoe4api
       ~/bin/golangci-lint -v run
